# SeamCarving

./: README.md
src/: CMakeLists.txt  SeamCarver.cpp  SeamCarver.h  main.cpp
